# adora

./: .devcontainer.json  .gitignore  Dockerfile  Makefile  README.md  compose.yml  dataflow.yml  devbox.json  graph.yml  main.py  pyproject.toml
.github/workflows/: mirror.yml
adora/: main.py  pyproject.toml
nodes/controller/: README.md  pyproject.toml
nodes/controller/controller/: main.py
nodes/controller/tests/: test_controller.py
nodes/recorder/: README.md  pyproject.toml
nodes/recorder/tests/: test_recorder.py
nodes/simulator/: README.md  pyproject.toml
nodes/simulator/simulator/: main.py  simulation_op.py
nodes/simulator/tests/: test_simulator.py
nodes/visualizer/: README.md  pyproject.toml
nodes/visualizer/tests/: test_visualizer.py
nodes/visualizer/visualizer/: main.py
nodes/vla-brain/: README.md  pyproject.toml
nodes/vla-brain/tests/: test_vla_brain.py
nodes/vla-brain/vla_brain/: main.py  vla_op.py
scripts/: git.sh
src/adora/: __init__.py  simulation_op.py  vla_op.py
