[project]
name = "adora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs>=0.4.1",
    "dora-rs-cli>=0.4.1",
    "genesis-world>=0.4.2",
    "lerobot>=0.4.4",
    "num2words>=0.5.14",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.11.0.86",
    "pathspec>=1.0.4",
    "transformers>=4.57.6",
    "xacro>=2.1.1",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
